--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "eslint": "^8.47.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.28.1",
-    "jest": "^29.6.4",
+    "jest": "^29.7.0",
     "jest-cli": "^29.6.4"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest --coverage"
   },
   "eslintConfig": {
     "root": true
